--- a/FlavourFlow/FlavourFlow.csproj
+++ b/FlavourFlow/FlavourFlow.csproj
@@ -6,4 +6,17 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Content Remove="Components\Layout\NavMenu.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="Components\Layout\NavMenu.razor.css" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\Application\JavaScript.js" />
+    <None Include="wwwroot\Home.css" />
+  </ItemGroup>
+
 </Project>
